--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -5,18 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../../assets/css/output.css" rel="stylesheet" />
-    <title>MetaCode</title>
+    <title>Maze Bank</title>
   </head>
-  <body class="overflow-x-hidden text-sm md:text-base lg:text-lg ">
-    <header class="bg-customBlack-blacklightdark h-auto w-screen">
-      <button
-        type="button"
-        id="menu-mobile"
-        class="cursor-pointer float-right mr-4 pt-2 pr-3">
-        <i class="fa-solid fa-bars text-white fa-xl"></i>
-      </button>
-        </div>
-      </main>
-    </footer>
+  <body class="overflow-x-hidden bg-blue text-sm md:text-lg lg:text-xl">
+    <header class="h-auto w-screen pt-3">
+      <h1 class="flex justify-center">Welcome to the Bank</h1>
+      <h2 class="flex justify-center">You will be able to withdraw and/or deposit any amount you wish</h2>
+    </header>
+    <div>
+      <div>
+        <section class="flex items-center flex-col gap-2">
+          <h1>Deposit</h1>
+          <h2>Current Balance</h2>
+          <button id="button" type="btn" class="cursor-pointer">Send</button>
+        </section>
+      </div>
+      <div>
+        <section class="flex items-center flex-col gap-2">
+          <h1>Withdraw</h1>
+          <h2>New Balance</h2>
+          <button id="button" type="btn" class="cursor-pointer">Take</button>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
