--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -7,37 +7,37 @@
     <link href="../../assets/css/output.css" rel="stylesheet" />
     <title>Maze Bank</title>
   </head>
-  <body class="overflow-x-hidden bg-gray text-base md:text-lg lg:text-xl mt-6">
+  <body class="overflow-x-hidden bg-pink text-base md:text-lg lg:text-xl mt-6">
     <header class="h-auto w-screen pt-3">
       <h1 class="flex justify-center">Welcome to the Bank App!</h1>
     </header>
     <div class="flex justify-center gap-16 pt-16">
-      <div class="bg-green flex flex-col justify-center items-center border-2 w-32">
-        <h5>Deposit</h5>
+      <div class="bg-green flex flex-col justify-center items-center border-none border-2 w-32">
+        <h2>Deposit</h2>
           <h2><span id="deposit">00.00</span>€</h2>
       </div>
-      <div class="bg-green flex flex-col justify-center items-center border-2 w-32">
-        <h5>Withdraw</h5>
+      <div class="bg-red flex flex-col justify-center items-center border-none border-2 w-32">
+        <h2>Withdraw</h2>
           <h2><span id="withdraw">00.00</span>€</h2>
       </div>
     </div>
     <div class="flex justify-center pt-16">
-      <div class="bg-green flex flex-col justify-center items-center border-2 w-32">
-        <h5>Balance</h5>
+      <div class="bg-blue flex flex-col justify-center items-center border-none border-2 w-32">
+        <h2>Balance</h2>
           <h2><span id="balance">500.00</span>€</h2>
       </div>
     </div>
     <div class="pt-20">
       <div class="flex flex-col items-center gap-2">
-        <h4>Deposit Amount</h4>
-          <input type="number" class="w-48" placeholder="Enter deposit amount">
-          <button id="deposit_btn" class="">Deposit</button>
-      </div>
+        <h4>Deposit Amount:</h4>
+          <input type="number" class="w-48 text-center" placeholder="Enter deposit amount">
+          <button type="button" id="deposit_btn" class="bg-gray w-24 text-white rounded-full">Deposit</button>
+        </div>
       <div class="flex flex-col items-center gap-2 pt-10">
-        <h4>Withdraw Amount</h4>
-          <input type="number" class="w-48" placeholder="Enter withdraw amount">
-          <button id="withdraw_btn" class="">Withdraw</button>
-      </div>
+        <h4>Withdraw Amount:</h4>
+          <input type="number" class="w-48 text-center" placeholder="Enter withdraw amount">
+          <button type="button" id="withdraw_btn" class="bg-gray w-24 text-white rounded-full">Withdraw</button>
+        </div>
     </div>
   </body>
 </html>
