--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -47,13 +47,13 @@
     <div class="pt-6">
       <div class="flex flex-col items-center gap-2">
         <h4>Deposit Amount:</h4>
-          <input type="number" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter deposit amount">
-          <button type="button" id="deposit_btn" class="bg-gray w-24 md:w-32 text-white rounded-full">Deposit</button>
+          <input id="deposit-amount" type="number" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter deposit amount">
+          <button type="button" id="depositBtn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Deposit</button>
       </div>
       <div class="flex flex-col items-center gap-2 pt-10 pb-10">
         <h4>Withdraw Amount:</h4>
-          <input type="number" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter withdraw amount">
-          <button type="button" id="withdraw_btn" class="bg-gray w-24 md:w-32 text-white rounded-full">Withdraw</button>
+          <input id="withdraw-amount" type="number" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter withdraw amount">
+          <button type="button" id="withdrawBtn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Withdraw</button>
       </div>
     </div>
   </body>
