--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -11,7 +11,10 @@
     <header class="h-auto w-screen pt-3">
       <h1 class="flex justify-center bolded"><b>Welcome to the Bank App!</b></h1>
     </header>
-    <form action="" class="flex flex-col items-center pt-20 gap-1">
+    <div class="flex justify-center">
+      <button type="btn" id="form-btn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Fill our Form</button>
+    </div>
+    <form action="" class="flex flex-col items-center pt-20 gap-1 hidden">
       <label for="">
         <span title="Full Name">Name</span> 
       </label>
