--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../../assets/css/output.css" rel="stylesheet" />
+    <link href="../../assets/css/output.css" rel="stylesheet"/>
     <title>Maze Bank</title>
   </head>
   <body class="overflow-x-hidden bg-pink md:text-xl lg:text-3xl mt-6">
@@ -51,12 +51,12 @@
       <div class="flex flex-col items-center gap-2">
         <h4>Deposit Amount:</h4>
           <input id="deposit-amount" type="number" min="1" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter deposit amount">
-          <button type="button" id="depositBtn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Deposit</button>
+          <button type="button" id="deposit-button" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Deposit</button>
       </div>
       <div class="flex flex-col items-center gap-2 pt-10 pb-10">
         <h4>Withdraw Amount:</h4>
           <input id="withdraw-amount" type="number" min="1" class="w-52 text-center md:w-72 lg:w-96" placeholder="Enter withdraw amount">
-          <button type="button" id="withdrawBtn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Withdraw</button>
+          <button type="button" id="withdraw-button" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Withdraw</button>
       </div>
     </div>
   </body>
