--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -44,7 +44,7 @@
     <div class="flex justify-center pt-6">
       <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
         <h2><b>Balance</b></h2>
-          <h2><span id="balance-total"></span>€</h2>
+          <h2><span id="balance"></span>€</h2>
       </div>
     </div>
     <div class="pt-6">
