--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -39,19 +39,19 @@
                 <h2><span id="form-name"></span></h2>
             </div>
           </div>
-          <div class="flex flex-col items-center pt-6">
+          <div class="flex items-center pt-6">
               <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
                 <h2><b>Your phone number</b></h2>
                   <h2><span id="form-number"></span></h2>
               </div>
           </div>
-          <div class="flex justify-center pt-6">
+          <div class="flex items-center pt-6">
             <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
               <h2><b>Your email</b></h2>
                 <h2><span id="form-email"></span></h2>
             </div>
           </div>
-          <div class="flex justify-center pt-6">
+          <div class="flex items-center pt-6">
             <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
               <h2><b id="balance">Current balance</b></h2>
                 <h2><span id="form-balance"></span></h2>
