--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="flex items-center pt-6">
             <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
-              <h2><b id="balance">Current balance</b></h2>
+              <h2><b>Current balance</b></h2>
                 <h2><span id="form-balance"></span></h2>
             </div>
           </div>
