--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -35,19 +35,19 @@
       <div>
         <div class="flex flex-col items-center pt-10"> 
           <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
-            <h2><b>Your name</b></h2>
+            <h2><b>Name</b></h2>
                 <h2><span id="form-name"></span></h2>
             </div>
           </div>
           <div class="flex items-center pt-6">
               <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
-                <h2><b>Your phone number</b></h2>
+                <h2><b>Phone number</b></h2>
                   <h2><span id="form-number"></span></h2>
               </div>
           </div>
           <div class="flex items-center pt-6">
             <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
-              <h2><b>Your email</b></h2>
+              <h2><b>Email</b></h2>
                 <h2><span id="form-email"></span></h2>
             </div>
           </div>
@@ -107,7 +107,7 @@
         <button class="bg-gray w-24 md:w-32 text-white rounded-full">Send</button>
         <div class="flex flex-col items-center pt-10"> 
           <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
-            <h2><b>Beneficiary's name</b></h2>
+            <h2><b>Beneficiary</b></h2>
                 <h2><span id="name-sent"></span></h2>
             </div>
           </div>
