--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -15,27 +15,27 @@
       <button type="btn" id="form-btn" class="bg-gray w-24 md:w-32 lg:w-48 text-white rounded-full">Fill our Form</button>
     </div>
     <form action="" id="form" class="flex flex-col items-center pt-10 pb-10 gap-1 hidden">
-      <label>
+      <label class="flex flex-col items-center">
         <span title="Full Name">Name</span>
-        <span id="error-name" class="text-red"></span>
+        <span id="error"></span>
       </label>
       <input id="name" type="text" class="w-52 md:w-72 lg:w-96">
       <label>
         <span>Phone Number</span>
-        <span id="error-number" class="text-red"></span>
+        <span id="error"></span>
       </label>
       <input id="number" type="number" class="w-52 md:w-72 lg:w-96">
       <label>
         <span>Email</span>
-        <span id="error-email" class="text-red"></span>
+        <span id="error"></span>
       </label>
       <input id="email" type="email" class="w-52 md:w-72 lg:w-96">
       <label>
         <span>Balance</span>
-        <span id="error-balance" class="text-red"></span>
+        <span id="error"></span>
       </label>
       <input id="balance-curr" type="number" class="w-52 md:w-72 lg:w-96">
-      <button class="bg-gray w-24 md:w-32 text-white rounded-full" id="send-btn">Send</button>
+      <button type="button" class="bg-gray w-24 md:w-32 text-white rounded-full" id="send-btn">Send</button>
       <div>
         <div class="flex flex-col items-center pt-10"> 
           <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
