--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -36,29 +36,29 @@
       </label>
       <input id="balance-curr" type="number" class="w-52 md:w-72 lg:w-96">
       <button type="button" class="bg-gray w-24 md:w-32 text-white rounded-full" id="send-btn">Send</button>
-      <div>
+      <div class="flex flex-col items-center">
         <div class="flex flex-col items-center pt-10"> 
-          <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
+          <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-fit">
             <h2><b>Name</b></h2>
-                <h2><span id="form-name"></span></h2>
+                <h2><span class="flex flex-col" id="form-name"></span></h2>
             </div>
           </div>
           <div class="flex items-center pt-6">
-              <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
+              <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-fit">
                 <h2><b>Phone number</b></h2>
-                  <h2><span id="form-number"></span></h2>
+                  <h2><span class="flex flex-col" id="form-number"></span></h2>
               </div>
           </div>
           <div class="flex items-center pt-6">
-            <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
+            <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-fit">
               <h2><b>Email</b></h2>
-                <h2><span id="form-email"></span></h2>
+                <h2><span class="flex flex-col" id="form-email"></span></h2>
             </div>
           </div>
           <div class="flex items-center pt-6">
-            <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-40 md:w-60">
+            <div class="bg-blue flex flex-col items-center border-none border-2 rounded-lg w-fit">
               <h2><b>Current balance</b></h2>
-                <h2><span id="form-balance"></span></h2>
+                <h2><span class="flex flex-col" id="form-balance"></span></h2>
             </div>
           </div>
       </div>
